--- a/TODO
+++ b/TODO
@@ -10,6 +10,10 @@ inc by adding your own file
 
 = someday =
 
+pick a new name
+  "fake real" website
+  distributable
+
 can use gdrive + dropbox at the same time :)
 
 lossless hard core h264 on their way in [?]
@@ -26,6 +30,7 @@ update/synchronize "this many clients total" file
 nice'ish GUI.
 
 daemonizable..
+  has icons at all LOL.
 
 "client x has z files"
 
