--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ take real values
 
 = someday =
 
-got-annex
+git-annex?
 
 this could be more cost effective than other options, using amazon's freeze...
 
