--- a/TODO
+++ b/TODO
@@ -11,6 +11,12 @@ NB that I don't think XXX has ability to "add from it from anywhere" or possibly
 
 = someday =
 
+auto...submit them to youtube, too?
+
+auto compress videos (lossless I guess)
+
+Maybe auto compress submissions...zip them right up?
+
 git-annex?
 
 this could be more cost effective than other options, using amazon's freeze...
