--- a/TODO
+++ b/TODO
@@ -13,6 +13,8 @@ NB that I don't think XXX has ability to "add from it from anywhere" or possibly
 
 auto...submit them to youtube, too?
 
+auto upload photos to facebook, too?
+
 auto compress videos (lossless I guess)
 
 Maybe auto compress submissions...zip them right up?
