--- a/TODO
+++ b/TODO
@@ -25,6 +25,8 @@ pick a new name
   
 = someday =
 
+use registry to "auto determine" your gdrive home, etc.
+
 NB that I don't think XXX has ability to "add from it from anywhere" or possibly keep vanilla copies around...
   tell them
 
