fix up hard coded

--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 = Yes do =
 
-GUI adjust option "there will be this many clients total"
-  GUI local dropbox repo root
+GUI 
   everything else
   save config as local file, done
 
