--- a/TODO
+++ b/TODO
@@ -14,6 +14,11 @@ pick a new name
   
 = someday =
 
+combine the google drive folders...
+
+"this many are currently online"
+  "each is doing this..."
+
 warn on too many files "you should really be zipping this, buddy!"
 
 "daemonize" mode vs. setup
