--- a/TODO
+++ b/TODO
@@ -6,6 +6,10 @@ test it between 2 computers at work
 
 = someday =
 
+prompt to cleanup old transfer
+
+make the long dir name less confusing
+
 it should be able to capture to 2 places, same computer
 
 innosetup
