--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ test it between 2 computers at work
   
 = maybe =
 
+don't wait and loop, just prompt for the upload...
+
 = someday =
 
 prompt to cleanup old transfer
