--- a/TODO
+++ b/TODO
@@ -18,7 +18,9 @@ pick a new name
   "fake real" website
   distributable
 
-combine the google drive folders into subfolders
+combine the gdrive folders into subfolders
+
+assert they "have" 3G they can use to give to gdrive...
 
 "this many are currently online"
   "each is doing this..."
@@ -34,7 +36,7 @@ cleanup shutdown code it raises an exception?
 
 better folders, don't re-mkdir them if they don't exist
 
-prompt for "google drive found ok?" for init
+prompt for "gdrive found ok?" for init
 
 gui show status updates, also warn when one client appears to be lagging
 
@@ -118,7 +120,7 @@ encryption?
 
 allow "your brother to also sync your stuff" (hmm...just use the public part of it?
   require "shared" dropbox folder, with your brother? yeah that sounds sane...
-    does google drive sharing allow them to sync to a local folder at that point? dropbox?
+    does gdrive sharing allow them to sync to a local folder at that point? dropbox?
 
 able to use "just the remote API" to copy it to the temp folder, instead of having to have it installed locally [?]
 
