--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ test it between 2 computers at work
 
 = someday =
 
+new icons
+
 prompt to cleanup old transfer "do you still want to transfer them?"
 
 make the long dir name less confusing
