fix file size bug [phew]

--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ test it between 2 computers at work
 
 = someday =
 
+GUI statuses better/at all...
+
 new icons
 
 prompt to cleanup old transfer "do you still want to transfer them?"
