--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ test it between 2 computers at work
 
 GUI statuses better/at all...
 
+some ability to like "let uncle jim upload you a big folder somehow" that you will preserve in your system  
+
 new icons
 
 prompt to cleanup old transfer "do you still want to transfer them?"
