--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ split too large of files
 
 = if I ever want to distribute =
 
+right click on folder "sync it!"
+
 the 2 GUI statuses...
 
 new/real icons
