--- a/TODO
+++ b/TODO
@@ -19,6 +19,10 @@ new/real icons
 no dual folder stuff, you just drop it into your local preservation folder, it goes from there (renamed it to .in_process perhaps?)
   and skips you copying it in to a local folder :P
 
+double check 15s for static files when they click "ready..."
+  
+update the found file list if they rename things...? sure why not LOL
+
 innosetup
 
 pick a new name
