backtraces, working'ish status

--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ fix/do the minimize to tray button
 
 right click on folder "sync it!"
 
-add the 2 GUI statuses...
+add the 2 split GUI statuses...
 
 new/real icons
 
@@ -22,6 +22,7 @@ no dual folder stuff, you just drop it into your local preservation folder, it g
 double check 15s for static files when they click "ready..."
   
 update the found file list if they rename things...? sure why not LOL
+
 
 innosetup
 
