split gui prompts

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 = Yes do =
+
+test it at work
+
+then go cuh-razy with it
   
 = maybe =
 
@@ -10,9 +14,7 @@ change verbiage to 'repo'
 
 fix/do the minimize to tray button
 
-right click on folder "sync it!"
-
-add the 2 split GUI statuses...
+right click on a folder "sync it!"
 
 new/real icons
 
@@ -22,7 +24,6 @@ no dual folder stuff, you just drop it into your local preservation folder, it g
 double check 15s for static files when they click "ready..."
   
 update the found file list if they rename things...? sure why not LOL
-
 
 innosetup
 
