--- a/TODO
+++ b/TODO
@@ -35,6 +35,8 @@ pick a new name
 
 = someday/never =
 
+assert they have dropbox_size free *at all* on their drive...
+
 ability to add a client "just transfer to it" what it requests, etc.
 
 synchronize "a full folder, with changes"
