--- a/TODO
+++ b/TODO
@@ -26,6 +26,11 @@ bounce it off people
 
 = someday/never =
 
+on network share: have the "number of clients expected" tracking file right there...re-read it each time you...are about to wait for more clients to finish...
+  and when you come up, of course
+  the ideal for humans, of course, would be able to add a new repo, it auto-resinks for them, but...this might be an interesting work around, could maybe add
+    a button for "add self as new repo to this system" that for now described how to do it for them...yeah.
+  
 the dropbox balloon popup files can have filenames that sound confusing to humans...
 
 re-split partial files (i.e. keep around the old one, on re-transfer, delete partials, re-split, otherwise it looks confusing, though happening to still work...)
