add functionality, basically break most unit tests

--- a/TODO
+++ b/TODO
@@ -9,6 +9,14 @@ do md5's for single files
   
 = someday/never =
 
+it has an option "this place doesn't have a final repo in it, just upload..."
+
+figure out/show how to share dropboxes, to sync other peoples' stuff...
+
+preserve timestamps...
+
+research competitors (aq, jungle drive?)
+
 revealing seems odd for the various folder...maybe it needs a local "root" folder or something?
 
 warn when shutting down "might take awhile"
